还是没写完剧本目录。。

--- a/my-LARP-list/index.html
+++ b/my-LARP-list/index.html
@@ -159,12 +159,16 @@
         <li><a href="#13-巴山夜雨">13 巴山夜雨</a></li>
         <li><a href="#14-诡计博物馆">14 诡计博物馆</a></li>
         <li><a href="#15-云使--高质量的历史还原本">15 云使 | 高质量的历史还原本</a></li>
-        <li><a href="#16-刀鞘">16 刀鞘</a></li>
+        <li><a href="#16-刀鞘--有点寂寞">16 刀鞘 | 有点寂寞</a></li>
         <li><a href="#17-爱幼妇产医院">17 爱幼妇产医院</a></li>
-        <li><a href="#18-病娇男孩的精分日记">18 病娇男孩的精分日记</a></li>
+        <li><a href="#18-病娇男孩的精分日记--可冲">18 病娇男孩的精分日记 | 可冲</a></li>
         <li><a href="#19-野蔷薇">19 野蔷薇</a></li>
-        <li><a href="#20-恶名昭著">20 恶名昭著</a></li>
-        <li><a href="#21-月下沙利叶">21 月下沙利叶</a></li>
+        <li><a href="#20-恶名昭著--让我在你的幸福里恶名昭著">20 恶名昭著 | 让我在你的幸福里恶名昭著</a></li>
+      </ul>
+    </li>
+    <li><a href="#好起来了">好起来了</a>
+      <ul>
+        <li><a href="#21-月下沙利叶--草木皆兵">21 月下沙利叶 | 草木皆兵</a></li>
         <li><a href="#22-纸帆">22 纸帆</a></li>
         <li><a href="#23-上路">23 上路</a></li>
         <li><a href="#24-档案-玻璃屋">24 档案 玻璃屋</a></li>
@@ -347,19 +351,149 @@
 <p>云使的还原、推理环节同样出色，我们还原花了好长的时间，才把任务关系理顺，至于推凶，嗯我实在看不下去，自爆了出来（作者写明可以自爆，不影响）</p>
 <p>这个本真的太好，喜欢历史还原的可以冲，于我而言，遗憾的是，同车5个人都是认识的，其中一对情侣，于是我就有点边缘。最后情侣有没有沉浸到我不知道，反正剩下三个人都在吃他们的瓜，就，挺影响体验的。</p>
 <p>还有就是，这本玩的有些早了，浪费了一个好本。</p>
-<h3 id="16-刀鞘">16 刀鞘</h3>
+<h3 id="16-刀鞘--有点寂寞">16 刀鞘 | 有点寂寞</h3>
+<blockquote>
+<p>7.12 | 素未谋面 | 城限 | 148</p>
+<p>关键词：民国 机制阵营 情感</p>
+<p>时长：3.5 h</p>
+<p>4男3女</p>
+<p>DM：（不认识）</p>
+</blockquote>
+<p>昨天玩云使的时候，一个玩本认识的女孩问我晚上玩不玩《尘光》，然后发现我俩都在惊池，本来是说等我云使打完，不过我们结束太晚了，她们就另找了人先开了。走的时候顺带约了第二天的《刀鞘》。</p>
+<p>第一次去素未，惊呆了，在商场的蒸汽机械街区，店铺很大，你排面有了。</p>
+<p>不过房间挺小的，我们在一个类似民国警局风格的房间，有个小监仓，不过没用上。</p>
+<p>拿的是全场最弱的角色，他的乐趣在于找打，不过我当时没get到，最后一刻疯狂找打，闹得大家不太愉快。不过最不愉快的点在于我这个奶妈位没有救人。怎么说呢，从我的角度来讲，这很没体验。</p>
+<p>说说机制，摇骰子，基本规则是摇到几点加多少武力，但对于特殊的人，会有特殊规则，所以，我CP整场下来，对着一个人疯狂输出，结果把自己干趴三次，我救了两次，最后第四次我选择放弃。</p>
+<p>但你以为那个人能赢？错了，还有阵营呢，那人所在的阵营要赢，还挺难的。多的就不说了，反正我们那场最后的结局出乎意料。</p>
+<p>再说剧情，这是个情感本，我是后来才知道的。后来跟人聊起，说她当情感本玩的，苦得稀里哗啦。听得我一脸懵逼，因为我们的感情线完全没有出来，大家只想机制。但据说《刀鞘》的感情线写得不错，至于怎么玩，还是要看队友。</p>
+<p>最后说时长，介绍里写5小时的本，我们玩了3.5小时，我也不知为啥，可能我们都在玩机制吧。。。</p>
+<p>但是只玩机制，于我个人而言就很难受，作为一个辅助位，全程就看着别人打，欢乐嘛倒也欢乐，但最后有点不甘自己也想参与一下，就引起大家的气愤。结束后我尝试给大家解释，但我错了，别人才不会去体会你什么心情，人家没玩好，这才是重要的。只怪自己不会玩。</p>
 <h3 id="17-爱幼妇产医院">17 爱幼妇产医院</h3>
-<h3 id="18-病娇男孩的精分日记">18 病娇男孩的精分日记</h3>
+<blockquote>
+<p>7.14 | 惊池 | 盒装 | 补位</p>
+<p>关键词：微恐 硬核 变格</p>
+<p>时长：4 h</p>
+<p>4男4女</p>
+<p>DM：小胡</p>
+</blockquote>
+<p>恐怖本，然而并不是很恐怖（店家控制），主要恐怖的点在于我背对门坐着。。（但我后来看测评，别家的恐怖好有意思欸）</p>
+<p>刷评论的时候不小心看过一点剧透，知道凶手不止一两个。但实际还是没完全盘出来。</p>
+<p>作为一个硬核本，也还行，线索卡的信息挺多的，就是指向性不强。加上大家都有秘密，而且还是个变格，就更离谱，都不说的话要盘好久。</p>
+<p>最后，我差点逃脱了，DM问凶手的时候给了个不大不小的提示，瞬间被指认。。我麻了。。</p>
+<h3 id="18-病娇男孩的精分日记--可冲">18 病娇男孩的精分日记 | 可冲</h3>
+<blockquote>
+<p>7.19 | 异人馆 | 盒装 | 40（测本）</p>
+<p>关键词：精分 硬核 还原</p>
+<p>时长：3.5 h</p>
+<p>4男3女</p>
+<p>DM：（不认识）</p>
+</blockquote>
+<p>风很大的新盒装，质量可以</p>
+<p>两个密室，两个大神，第一个密室大神出去抽根烟，知道了答案，第二个密室大神思索了一下，知道了答案。就离谱</p>
+<p>第一个密室有处小疑点，我当时想了半天没想明白。最后给了个反转，说你们前面盘的手法，其实有几个疑点，请重新盘。giao</p>
+<p>剧本以日记的形式徐徐展开，你以为看内容就完了，其实日记本身也是线索，绝了</p>
+<p>有些恐怖成分，演绎的部分不是很恐怖，看得出来店家也没有像把它做成恐怖，不过本子里有些地方确实透着恐怖。并且最后跟结局对应。讲真，作为一个盒装，这质量没得说，可冲。</p>
 <h3 id="19-野蔷薇">19 野蔷薇</h3>
-<h3 id="20-恶名昭著">20 恶名昭著</h3>
-<h3 id="21-月下沙利叶">21 月下沙利叶</h3>
+<blockquote>
+<p>7.20 | 目击者 | 盒装？ | 30（新人）</p>
+<p>关键词：硬核 还原</p>
+<p>时长：5.5 h</p>
+<p>3男3女</p>
+<p>DM：（不认识）
+PS：DM挺帅的，就是说话不大利索。。</p>
+</blockquote>
+<p>褒贬不一的本，作为一个新手来看，还挺硬的。</p>
+<p>有几个设定有点扯，甚至有个凶案出来走走过场。。我麻了</p>
+<p>不知道为什么这种回溯过去，获得记忆，再实施杀人的桥段，让有想起了刺客信条。。</p>
+<p>（没别的意思，我很喜欢刺客信条，只是突然想起，单纯觉得有点像）</p>
+<p>最后的凶案，怎么说呢，凶手竟然是摇摆位，惊呆。但这个摇摆的临界点好像有点问题。</p>
+<p>反正30不亏。</p>
+<h3 id="20-恶名昭著--让我在你的幸福里恶名昭著">20 恶名昭著 | 让我在你的幸福里恶名昭著</h3>
+<blockquote>
+<p>7.21 | 惊池 | 城限 | 118</p>
+<p>关键词：欢乐 推理 立意 中二</p>
+<p>时长：4.5 h</p>
+<p>4男2女</p>
+<p>DM：Sssy
+先说结论，我挺喜欢这个本子的</p>
+</blockquote>
+<p>里面有些比较中二的句子，标题是一个（原句不记得了，大概就这意思），还有诸如“他们光万丈，他们一身锈，他们住高楼，他们在深渊”、“未经他人苦，勿劝他人善”。</p>
+<p>拿的是反串角色，1.3，也挺喜欢这个角色，名字奇奇怪怪，带着一个纱布单眼罩，封面是一句“我爸爸不喜欢我开枪”。开始的时候DM问我们，看封面，觉得自己是个什么样的人。我说叛逆。</p>
+<p>身世很带感，有点点超能力，爸爸是个牛人。但不知道为什么死了，然后我也被追杀。公安系统被一个巨大的组织黑了，这个组织是杀我爸的组织，黑了之后，发生了疯狂的犯罪。作者的文笔，很带感。后来为了寻找父亲死亡的真相，我加入了组织，来到了这里。需要玩三个游戏，才能开始最终的选拔。</p>
+<p>第一个算是破冰游戏，挺好的，猜出来了。第二个就开始难了，要对时间线，有点复杂。第三个，相当于谁是卧底，但，离谱，真的离谱。</p>
+<p>两个凶案，我这个位置应该是C位（但C的点有些一致，而且容易被质疑），最后的凶案，因为有玩家报错了关键信息，所以DM提示了很多次我们还是没盘出来。</p>
+<p>最后的立意，我是挺感动的，车上一个第一次打本的人甚至哭了，这个本大概比较适合中二选手吧。</p>
+<h2 id="好起来了">好起来了</h2>
+<p>大概是这个节点往前一点，了解到一些头部店家，玩本的经验慢慢起来了，渐渐有了更好的剧本杀体验</p>
+<h3 id="21-月下沙利叶--草木皆兵">21 月下沙利叶 | 草木皆兵</h3>
+<blockquote>
+<p>7.24 | 素未谋面 | 独家 | 168</p>
+<p>关键词：微恐 还原 温情？？？</p>
+<p>时长：4.5 h</p>
+<p>4男2女</p>
+<p>DM：鹿易
+因为蹭上了曦和的车，于是约了一车月下，本来是22号晚上有一车，但连着打了三个晚上，有点累就没去（而且临时补位也没给个折扣，划重点，hhh）</p>
+</blockquote>
+<p>去之前也是做了不少功课，听说素未走了一批DM，现在不怎么好了，然后听说大悦城稍好一点，就鸽了曦和车头，上了大悦城的车。但是。。车上居然两队情侣，还都是不看本的，全程撒娇，我特么？？？你们打情骂俏哪里不能，非得花钱来？得到教训，以后情侣车慎重再慎重。</p>
+<p>排除这些，本子还是不错，不枉独家。说是微恐，但非要形容的话，那就是草木皆兵。真的外面任何风吹草动都会一个激灵。但，该吃的惊吓还是逃不掉，激灵那是人家没想吓你，真要吓你的时候根本激灵的机会都不给【手动狗头】。</p>
+<p>然后，我们还把自己坑了。因为是还原本，DM也强调这是还原本，而且第一本之后我们发现，每个人都动了手，但其实每个都没动手，于是第二个本子出来，我不知哪来的神来点子，提议换本看。DM竟然也没有阻止，于是，我整场下来看了四个角色的本，看的我头昏脑胀，最致命的是两个女生不看本，拿到本就开始盘，我：。。。。。。</p>
+<p>最后当然是没投到凶啦，但故事真的绝，不亏独家！</p>
 <h3 id="22-纸帆">22 纸帆</h3>
+<blockquote>
+<p>7.25 | 惊池 | 城限 | 188</p>
+<p>关键词：情感 沉浸 还原 推理</p>
+<p>时长：4 h</p>
+<p>3男3女</p>
+<p>DM：鱼总</p>
+</blockquote>
 <h3 id="23-上路">23 上路</h3>
+<blockquote>
+<p>7.29 | 怖咕鸟 | 盒装 | 测本</p>
+<p>关键词：微恐 还原 推理</p>
+<p>时长：4 h</p>
+<p>2男3女</p>
+<p>DM：（店长）</p>
+</blockquote>
 <h3 id="24-档案-玻璃屋">24 档案 玻璃屋</h3>
+<blockquote>
+<p>7.30 | 别剧异阁 | 盒装 | 99（新人）+ 20修仙</p>
+<p>关键词：硬核 还原</p>
+<p>时长：6 h</p>
+<p>3男4女</p>
+<p>DM：（不认识）</p>
+</blockquote>
 <h3 id="25-修复师1">25 修复师1</h3>
+<blockquote>
+<p>7.31 | 一本叨叨 | 城限 | 168</p>
+<p>关键词：历史 情感 还原 沉浸 演绎</p>
+<p>时长：5 h</p>
+<p>4男3女</p>
+<p>DM：小野</p>
+</blockquote>
 <h3 id="26-比利比利和比利">26 比利比利和比利</h3>
+<blockquote>
+<p>8.4 | 一本叨叨 | 城限 | 168</p>
+<p>关键词：机制 阵营</p>
+<p>时长：4.5 h</p>
+<p>4男3女</p>
+<p>DM：茶茶子</p>
+</blockquote>
 <h3 id="27-死者在幻夜中醒来">27 死者在幻夜中醒来</h3>
+<blockquote>
+<p>8.6 | 怖咕鸟 | 盒装 | 86（八折）</p>
+<p>关键词：硬核 还原</p>
+<p>时长：6 h</p>
+<p>4男3女</p>
+<p>DM：（不认识）</p>
+</blockquote>
 <h3 id="28-从前有座玄离山">28 从前有座玄离山</h3>
+<blockquote>
+<p>8.7 | 戏中人 | 城限 | 168</p>
+<p>关键词：欢乐 情感 甜甜的恋爱</p>
+<p>时长：5.5 h</p>
+<p>3男3女</p>
+<p>DM：宇哥</p>
+</blockquote>
         </div>
 
         
