--- a/my-LARP-list/index.html
+++ b/my-LARP-list/index.html
@@ -151,33 +151,43 @@
     </li>
     <li><a href="#后来打的本">后来打的本</a>
       <ul>
-        <li><a href="#07-深渊的天空">07 深渊的天空</a></li>
-        <li><a href="#08-孽岛疑云">08 孽岛疑云</a></li>
-        <li><a href="#09-飞鸟推理社">09 飞鸟推理社</a></li>
-        <li><a href="#10-瓶中恶灵">10 瓶中恶灵</a></li>
-        <li><a href="#11-窗边的女人">11 窗边的女人</a></li>
-        <li><a href="#12-莲花观">12 莲花观</a></li>
-        <li><a href="#13-巴山夜雨">13 巴山夜雨</a></li>
-        <li><a href="#14-诡计博物馆">14 诡计博物馆</a></li>
-        <li><a href="#15-云使--高质量的历史还原本">15 云使 | 高质量的历史还原本</a></li>
-        <li><a href="#16-刀鞘--有点寂寞">16 刀鞘 | 有点寂寞</a></li>
-        <li><a href="#17-爱幼妇产医院">17 爱幼妇产医院</a></li>
-        <li><a href="#18-病娇男孩的精分日记--可冲">18 病娇男孩的精分日记 | 可冲</a></li>
-        <li><a href="#19-野蔷薇">19 野蔷薇</a></li>
-        <li><a href="#20-恶名昭著--让我在你的幸福里恶名昭著">20 恶名昭著 | 让我在你的幸福里恶名昭著</a></li>
+        <li><a href="#08-深渊的天空">08 深渊的天空</a></li>
+        <li><a href="#09-孽岛疑云">09 孽岛疑云</a></li>
+        <li><a href="#10-飞鸟推理社">10 飞鸟推理社</a></li>
+        <li><a href="#11-瓶中恶灵">11 瓶中恶灵</a></li>
+        <li><a href="#12-窗边的女人">12 窗边的女人</a></li>
+        <li><a href="#13-莲花观">13 莲花观</a></li>
+        <li><a href="#14-巴山夜雨">14 巴山夜雨</a></li>
+        <li><a href="#15-诡计博物馆">15 诡计博物馆</a></li>
+        <li><a href="#16-云使--高质量的历史还原本">16 云使 | 高质量的历史还原本</a></li>
+        <li><a href="#17-刀鞘--有点寂寞">17 刀鞘 | 有点寂寞</a></li>
+        <li><a href="#18-爱幼妇产医院">18 爱幼妇产医院</a></li>
+        <li><a href="#19-病娇男孩的精分日记--可冲">19 病娇男孩的精分日记 | 可冲</a></li>
+        <li><a href="#20-野蔷薇">20 野蔷薇</a></li>
+        <li><a href="#21-恶名昭著--让我在你的幸福里恶名昭著">21 恶名昭著 | 让我在你的幸福里恶名昭著</a></li>
       </ul>
     </li>
     <li><a href="#好起来了">好起来了</a>
       <ul>
-        <li><a href="#21-月下沙利叶--草木皆兵">21 月下沙利叶 | 草木皆兵</a></li>
-        <li><a href="#22-纸帆--麻中麻">22 纸帆 | 麻中麻</a></li>
-        <li><a href="#23-上路">23 上路</a></li>
-        <li><a href="#24-档案-玻璃屋--好难啊">24 档案 玻璃屋 | 好难啊</a></li>
-        <li><a href="#25-修复师1--什么时候约一波2">25 修复师1 | 什么时候约一波2？</a></li>
-        <li><a href="#26-比利比利和比利--输了输了输了">26 比利比利和比利 | 输了输了输了</a></li>
-        <li><a href="#27-死者在幻夜中醒来--有靠谱队友可冲">27 死者在幻夜中醒来 | 有靠谱队友可冲</a></li>
-        <li><a href="#28-从前有座玄离山--超惊喜">28 从前有座玄离山 | 超惊喜！</a></li>
-        <li><a href="#29-勿忘我--非常饱满">29 勿忘我 | 非常饱满</a></li>
+        <li><a href="#22-月下沙利叶--草木皆兵">22 月下沙利叶 | 草木皆兵</a></li>
+        <li><a href="#23-纸帆--麻中麻">23 纸帆 | 麻中麻</a></li>
+        <li><a href="#24-上路">24 上路</a></li>
+        <li><a href="#25-档案-玻璃屋--好难啊">25 档案 玻璃屋 | 好难啊</a></li>
+        <li><a href="#26-修复师1--什么时候约一波2">26 修复师1 | 什么时候约一波2？</a></li>
+        <li><a href="#27-比利比利和比利--输了输了输了">27 比利比利和比利 | 输了输了输了</a></li>
+        <li><a href="#28-死者在幻夜中醒来--有靠谱队友可冲">28 死者在幻夜中醒来 | 有靠谱队友可冲</a></li>
+        <li><a href="#29-从前有座玄离山--超惊喜">29 从前有座玄离山 | 超惊喜！</a></li>
+        <li><a href="#30-勿忘我--饱满">30 勿忘我 | 饱满</a></li>
+      </ul>
+    </li>
+    <li><a href="#无剧透篇章">无剧透篇章</a>
+      <ul>
+        <li><a href="#31-神奇的罗斯塔特先生--duck不必">31 神奇的罗斯塔特先生 | duck不必</a></li>
+        <li><a href="#32-涂川--意难平">32 涂川 | 意难平</a></li>
+        <li><a href="#33-外交官--体验拉满">33 外交官 | 体验拉满</a></li>
+        <li><a href="#34-在逃公主--emmmm">34 在逃公主 | emmmm</a></li>
+        <li><a href="#35-人间记--人间不过平凡二字">35 人间记 | 人间不过“平凡”二字</a></li>
+        <li><a href="#36-粉灯--窝戏船港美绳zui强的蓝仁">36 粉灯 | 窝戏船港美绳zui强的蓝仁！</a></li>
       </ul>
     </li>
   </ul>
@@ -266,24 +276,24 @@
 <p>剧本写得不错的，我跟CP是唯一互选的一对。但，，这人物关系是真的乱，把爱而不得跟三角恋贯彻到底。。</p>
 <p>不过对我来说从来没有什么三角恋，从来爱的都是那一个。结局还算完满。</p>
 <h3 id="青楼机制">《青楼》机制</h3>
-<p>好像对凶手比较不友好，没藏住，。。然后，我的技能是双倍搜证，结果第一轮就死了。意难平啊///</p>
+<p>好像对凶手比较不友好，没藏住，。。然后，我的技能是双倍搜证，结果第一轮就死了。意难平啊啊啊</p>
 <h3 id="宿醉2欢乐">《宿醉2》欢乐</h3>
 <p>4.19</p>
-<p>惊池打的第一个本，朋友拉我去的，确实很欢乐，很可以</p>
+<p>惊池打的第一个本，朋友拉我去的，确实很欢乐，可以</p>
 <h2 id="后来打的本">后来打的本</h2>
 <blockquote>
 <p>后来，店家瘫了，我也出差了。停了一段时间，五月底回公司，开始了新的打本路。</p>
 </blockquote>
-<h3 id="07-深渊的天空">07 深渊的天空</h3>
+<h3 id="08-深渊的天空">08 深渊的天空</h3>
 <p>6.18 | 解谜城西 | 独家？ | 硬核推理</p>
 <p>“与恶龙缠斗过久，自身亦成恶龙；凝视深渊过久，深渊回以凝视。”</p>
 <p>不知道是不是独家，网上找资料说是独家，质量确实可以，但感觉，独家应该还不至于</p>
 <p>第二次打本时候认识的小姐姐拉我的，车上有推土机，总的来说很顺利。解谜环节，仿佛如有神助，看了没几分钟就解出来了，当然盘手法和密室还是要靠大神哈哈哈。</p>
-<h3 id="08-孽岛疑云">08 孽岛疑云</h3>
+<h3 id="09-孽岛疑云">09 孽岛疑云</h3>
 <p>6.19 | 惊池| 硬核推理 | 118</p>
 <p>玩的第一个豪门系列，确实很豪门，故事很复杂。。核诡完全错过。。我们一车蛮低配的，没记错的话盘了好久也没啥结果</p>
 <p>其实不记得什么剧情，只记得车上有人抽烟，然后忍了一晚上。出来之后觉得自己好傻，我为啥要花钱来这吸二手烟呢？下次有人抽烟我当场下车拜拜。</p>
-<h3 id="09-飞鸟推理社">09 飞鸟推理社</h3>
+<h3 id="10-飞鸟推理社">10 飞鸟推理社</h3>
 <p>6.22 | 解谜城西 | 独家 | 推理 | 87.84 （折后）</p>
 <p>【明明是我们看错了世界，却还要说世界欺骗了我们。】</p>
 <p>　　　　　　　　　　　　　　——《飞鸟集》</p>
@@ -294,20 +304,20 @@
 <p>就  在  你  后  面</p>
 </blockquote>
 <p>我：！！！！！！</p>
-<p>卧槽！还说这不是恐怖本！黑魆魆的搜证，恐怖的语气，还有这卡，你还说不恐怖！！</p>
+<p>卧槽！还说这不是恐怖本！乌黑黑的搜证，阴森森的语气，还有这卡，你还说不恐怖！！</p>
 <p>于是我，原地愣了两秒，心脏停了大概一秒，以迅雷不及掩耳之势迅速回头，什么也没有。。</p>
 <p>吓死老子了。。</p>
 <p>（这张卡还有另一面，就不剧透了）</p>
 <p>中途NPC进来给我们喂吃的，过程请脑部喂鸟。。我感觉有点羞耻，装傻啄羽毛，但还是逃不掉wwww</p>
 <p>推理部分不是很难，最后有反转，结局温馨</p>
 <p>总的来说，这本子不错</p>
-<h3 id="10-瓶中恶灵">10 瓶中恶灵</h3>
+<h3 id="11-瓶中恶灵">11 瓶中恶灵</h3>
 <p>6.23| 解谜城西 | 盒装 | 推理 | 98（券后）</p>
 <p>SCP本，但我是第一次接触，就，，很难</p>
 <p>这背景设定我要理解半天，还是不能完全理解的那种</p>
 <p>直接掉线。。</p>
 <p>但，实话说，这本质量还是可以的，不过要玩的话还是先补补课吧。。</p>
-<h3 id="11-窗边的女人">11 窗边的女人</h3>
+<h3 id="12-窗边的女人">12 窗边的女人</h3>
 <p>6.27 | 解谜城西 | 盒装 | 入门推理 | 78（券后）</p>
 <p>解析城西有个胖子DM叫福瑞，说来也巧，我在城西打了三个本，有两个都是他带</p>
 <p>他还有个可能是当家的本，叫《过阴》，港风恐怖，我对恐怖其实不感冒，但港风我可以</p>
@@ -317,12 +327,12 @@
 <p>真凶装傻一问三不知，还有帮凶替她隐藏，，emmm</p>
 <p>还有一个场外因素是，对面三个包括主力推土机和凶手是一起来的，主推选择相信她的朋友，剩下三个，一个是高玩帮凶，一个是DM凑数，还有一个懵逼的我。</p>
 <p>回过头看，这个本确实给人开了些眼界，可玩性还是很高。确实是经典本了。</p>
-<h3 id="12-莲花观">12 莲花观</h3>
+<h3 id="13-莲花观">13 莲花观</h3>
 <p>6.30 | 解谜城西 | 城限 | 微恐变格推理 | 148（券后）</p>
 <p>这是目前在解谜城西玩的最后一个本，因为城西店的客服像个机器人，或者说像淘宝客服，跟他没法交流，闹心。整个7月再也没有去过城西店，以后估计也不大会去。</p>
 <p>莲花观是个微恐变格，微恐本上旁观同车的女玩家其实是挺有趣的事情（没有恶意，就跟北方人看南方人看雪一样）整个盘凶应该不算难，就是变格部分有点烧脑。。我感觉我遇到变格就会挂机。。这个本正常找凶手不难，但还要找幕后真凶我就。。。（我是凶手，但我完全没想到幕后真凶会是谁，太狗了）</p>
 <p>可能因为是城限，这本还有NPC及一个小演绎，模仿茅山道士驱魔的小剧场。道具有点高级，算是一点小惊喜。整体而言，中规中矩吧。</p>
-<h3 id="13-巴山夜雨">13 巴山夜雨</h3>
+<h3 id="14-巴山夜雨">14 巴山夜雨</h3>
 <p>7.3 | 惊池 | 城限 | 情感 | 168</p>
 <p>DM：小胡</p>
 <p>本来约的另一个本，但有个人临时跳车，最后变成了巴山夜雨。算是镇店DM给开的本。不过整体玩下来，感觉玩了个寂寞？玩之前店里一直在吹的本，打完之后，DM说，这个本其实没有那么限。我：？？？？？</p>
@@ -331,7 +341,7 @@
 <p>最后的沉浸环节我感觉我有点边缘，，没有被感动到，而且我CP还是反串的，全程冷漠脸。。。</p>
 <p>最后DM问了我一个奇怪的问题，我仔细回忆了我的过去，愣是没明白这问题是怎么来的。。结束之后DM告诉我这是她加的。还说这个本其实没有那么限。</p>
 <p>我：。。。。。</p>
-<h3 id="14-诡计博物馆">14 诡计博物馆</h3>
+<h3 id="15-诡计博物馆">15 诡计博物馆</h3>
 <blockquote>
 <p>7.10 | 惊池 | 盒装？| 118</p>
 <p>关键词：硬核推理，缝合</p>
@@ -341,7 +351,7 @@
 <p>车上有大神（自称），前面几个案子盘下来还算顺利，照抄柯南实在无语。纵火案那个，，我也不知道行不行，反正听起来很高级。</p>
 <p>惯例反转，反转之后我就挂机了。算是第二次接触这种突然给你个反转的本，上一个是第七，但第七我一直没怎么在线，没印象。这次是真的宕机。大概也是前几幕盘的时候太用力，导致走不出来。</p>
 <p>不过长长见识，也还算过关。</p>
-<h3 id="15-云使--高质量的历史还原本">15 云使 | 高质量的历史还原本</h3>
+<h3 id="16-云使--高质量的历史还原本">16 云使 | 高质量的历史还原本</h3>
 <blockquote>
 <p>7.11 | 惊池 | 城限 | 208</p>
 <p>关键词：民国 情感 还原 历史 文革</p>
@@ -356,7 +366,7 @@
 <p>云使的还原、推理环节同样出色，我们还原花了好长的时间，才把任务关系理顺，至于推凶，嗯我实在看不下去，自爆了出来（作者写明可以自爆，不影响）</p>
 <p>这个本真的太好，喜欢历史还原的可以冲，于我而言，遗憾的是，同车5个人都是认识的，其中一对情侣，于是我就有点边缘。最后情侣有没有沉浸到我不知道，反正剩下三个人都在吃他们的瓜，就，挺影响体验的。</p>
 <p>还有就是，这本玩的有些早了，浪费了一个好本。</p>
-<h3 id="16-刀鞘--有点寂寞">16 刀鞘 | 有点寂寞</h3>
+<h3 id="17-刀鞘--有点寂寞">17 刀鞘 | 有点寂寞</h3>
 <blockquote>
 <p>7.12 | 素未谋面 | 城限 | 148</p>
 <p>关键词：民国 机制阵营 情感</p>
@@ -373,7 +383,7 @@
 <p>再说剧情，这是个情感本，我是后来才知道的。后来跟人聊起，说她当情感本玩的，苦得稀里哗啦。听得我一脸懵逼，因为我们的感情线完全没有出来，大家只想机制。但据说《刀鞘》的感情线写得不错，至于怎么玩，还是要看队友。</p>
 <p>最后说时长，介绍里写5小时的本，我们玩了3.5小时，我也不知为啥，可能我们都在玩机制吧。。。</p>
 <p>但是只玩机制，于我个人而言就很难受，作为一个辅助位，全程就看着别人打，欢乐嘛倒也欢乐，但最后有点不甘自己也想参与一下，就引起大家的气愤。结束后我尝试给大家解释，但我错了，别人才不会去体会你什么心情，人家没玩好，这才是重要的。只怪自己不会玩。</p>
-<h3 id="17-爱幼妇产医院">17 爱幼妇产医院</h3>
+<h3 id="18-爱幼妇产医院">18 爱幼妇产医院</h3>
 <blockquote>
 <p>7.14 | 惊池 | 盒装 | 补位</p>
 <p>关键词：微恐 硬核 变格</p>
@@ -385,7 +395,7 @@
 <p>刷评论的时候不小心看过一点剧透，知道凶手不止一两个。但实际还是没完全盘出来。</p>
 <p>作为一个硬核本，也还行，线索卡的信息挺多的，就是指向性不强。加上大家都有秘密，而且还是个变格，就更离谱，都不说的话要盘好久。</p>
 <p>最后，我差点逃脱了，DM问凶手的时候给了个不大不小的提示，瞬间被指认。。我麻了。。</p>
-<h3 id="18-病娇男孩的精分日记--可冲">18 病娇男孩的精分日记 | 可冲</h3>
+<h3 id="19-病娇男孩的精分日记--可冲">19 病娇男孩的精分日记 | 可冲</h3>
 <blockquote>
 <p>7.19 | 异人馆 | 盒装 | 40（测本）</p>
 <p>关键词：精分 硬核 还原</p>
@@ -398,7 +408,7 @@
 <p>第一个密室有处小疑点，我当时想了半天没想明白。最后给了个反转，说你们前面盘的手法，其实有几个疑点，请重新盘。giao</p>
 <p>剧本以日记的形式徐徐展开，你以为看内容就完了，其实日记本身也是线索，绝了</p>
 <p>有些恐怖成分，演绎的部分不是很恐怖，看得出来店家也没有像把它做成恐怖，不过本子里有些地方确实透着恐怖。并且最后跟结局对应。讲真，作为一个盒装，这质量没得说，可冲。</p>
-<h3 id="19-野蔷薇">19 野蔷薇</h3>
+<h3 id="20-野蔷薇">20 野蔷薇</h3>
 <blockquote>
 <p>7.20 | 目击者 | 盒装？ | 30（新人）</p>
 <p>关键词：硬核 还原</p>
@@ -413,7 +423,7 @@
 <p>（没别的意思，我很喜欢刺客信条，只是突然想起，单纯觉得有点像）</p>
 <p>最后的凶案，怎么说呢，凶手竟然是摇摆位，惊呆。但这个摇摆的临界点好像有点问题。</p>
 <p>反正30不亏。</p>
-<h3 id="20-恶名昭著--让我在你的幸福里恶名昭著">20 恶名昭著 | 让我在你的幸福里恶名昭著</h3>
+<h3 id="21-恶名昭著--让我在你的幸福里恶名昭著">21 恶名昭著 | 让我在你的幸福里恶名昭著</h3>
 <blockquote>
 <p>7.21 | 惊池 | 城限 | 118</p>
 <p>关键词：欢乐 推理 立意 中二</p>
@@ -430,7 +440,7 @@
 <p>最后的立意，我是挺感动的，车上一个第一次打本的人甚至哭了，这个本大概比较适合中二选手吧。</p>
 <h2 id="好起来了">好起来了</h2>
 <p>大概是这个节点往前一点，了解到一些头部店家，玩本的经验慢慢起来了，渐渐有了更好的剧本杀体验</p>
-<h3 id="21-月下沙利叶--草木皆兵">21 月下沙利叶 | 草木皆兵</h3>
+<h3 id="22-月下沙利叶--草木皆兵">22 月下沙利叶 | 草木皆兵</h3>
 <blockquote>
 <p>7.24 | 素未谋面 | 独家 | 168</p>
 <p>关键词：微恐 还原 温情？？？</p>
@@ -443,7 +453,7 @@
 <p>排除这些，本子还是不错，不枉独家。说是微恐，但非要形容的话，那就是草木皆兵。真的外面任何风吹草动都会一个激灵。但，该吃的惊吓还是逃不掉，激灵那是人家没想吓你，真要吓你的时候根本激灵的机会都不给【手动狗头】。</p>
 <p>然后，我们还把自己坑了。因为是还原本，DM也强调这是还原本，而且第一本之后我们发现，每个人都动了手，但其实每个都没动手，于是第二个本子出来，我不知哪来的神来点子，提议换本看。DM竟然也没有阻止，于是，我整场下来看了四个角色的本，看的我头昏脑胀，最致命的是两个女生不看本，拿到本就开始盘，我：。。。。。。</p>
 <p>最后当然是没投到凶啦，但故事真的绝，不亏独家！</p>
-<h3 id="22-纸帆--麻中麻">22 纸帆 | 麻中麻</h3>
+<h3 id="23-纸帆--麻中麻">23 纸帆 | 麻中麻</h3>
 <blockquote>
 <p>7.25 | 惊池 | 城限 | 188</p>
 <p>关键词：情感 沉浸 还原 推理</p>
@@ -467,7 +477,7 @@
 <p>
         <img class="mx-auto" alt="" src="/210808-jingchi.jpg" />   
     </p>
-<h3 id="23-上路">23 上路</h3>
+<h3 id="24-上路">24 上路</h3>
 <blockquote>
 <p>7.29 | 怖咕鸟 | 盒装 | 测本</p>
 <p>关键词：微恐 还原 推理</p>
@@ -479,7 +489,7 @@
 <p>微恐，不过可能因为人手不够，没太多恐怖成分在。</p>
 <p>这本还挺有意思，一家人总共去了某几个地方，玩家自行决定顺序，去一个地方解锁一段回忆。慢慢推人物关系。讲道理有一点点难，哈哈哈。但最后还算是都盘出来了，就是，，人物关系令人卧槽。</p>
 <p>最后一幕，我有个任务，隐藏我的特殊身份，但是我那时候本没看完，DM说了一半，我就直接爆了[捂脸]（然后把凶手也引爆了）。当我看完我的任务，不禁又是一句卧槽，心有千千言，奈何没文化，一句卧槽走天下[捂脸]</p>
-<h3 id="24-档案-玻璃屋--好难啊">24 档案 玻璃屋 | 好难啊</h3>
+<h3 id="25-档案-玻璃屋--好难啊">25 档案 玻璃屋 | 好难啊</h3>
 <blockquote>
 <p>7.30 | 别剧异阁 | 盒装 | 99（新人）+ 20修仙</p>
 <p>关键词：硬核 还原</p>
@@ -494,7 +504,7 @@
 <p>先是本格杀人，然后突然来了一手变格，魂穿+时穿，花了我们好长时间</p>
 <p>最后再来一手反转，说前面很多线索是假的（似曾相识的剧情 ）</p>
 <p>总的来说，很烧脑的一个本，而且绕的地方很多都是设定部分。要有很好的脑洞才能玩得转。。</p>
-<h3 id="25-修复师1--什么时候约一波2">25 修复师1 | 什么时候约一波2？</h3>
+<h3 id="26-修复师1--什么时候约一波2">26 修复师1 | 什么时候约一波2？</h3>
 <blockquote>
 <p>7.31 | 一本叨叨 | 城限 | 168</p>
 <p>关键词：历史 情感 还原 沉浸 演绎</p>
@@ -507,7 +517,7 @@
 <p>这是第一个破防的情感本，先出来的是亲情线，实在太惨了，演绎出来我就绷不住了</p>
 <p>然后紧接着爱情线，也蛮惨的，吞了一个世界的委屈，还在疯狂付出类型</p>
 <p>很棒，为了纪念这个本，我还单独写了一篇：<a href="https://ferristale.com/relic-restorer-1/">修复师1 | 一生一世一双人</a>（透剧预警）</p>
-<h3 id="26-比利比利和比利--输了输了输了">26 比利比利和比利 | 输了输了输了</h3>
+<h3 id="27-比利比利和比利--输了输了输了">27 比利比利和比利 | 输了输了输了</h3>
 <blockquote>
 <p>8.4 | 一本叨叨 | 城限 | 168</p>
 <p>关键词：机制 阵营</p>
@@ -521,7 +531,7 @@
 <p>麻了麻了</p>
 <p>完了突然变成立意本，七个人七个人格，不过我没太明白说的啥。。麻中麻</p>
 <p>我大概不适合玩孤身阵营本，太难了</p>
-<h3 id="27-死者在幻夜中醒来--有靠谱队友可冲">27 死者在幻夜中醒来 | 有靠谱队友可冲</h3>
+<h3 id="28-死者在幻夜中醒来--有靠谱队友可冲">28 死者在幻夜中醒来 | 有靠谱队友可冲</h3>
 <blockquote>
 <p>8.6 | 怖咕鸟 | 盒装 | 86（八折）</p>
 <p>关键词：硬核 还原</p>
@@ -538,7 +548,7 @@
 <p>还好这次后遗症没有那么大。第一次玩这种反转是第七，那会儿不会玩，没印象，第二次是诡计博物馆，宕机，第三次玻璃屋，难受，这是第四次，勉强能接受。。（队友太给力）</p>
 <p>说到这个本，其实还是不错的，评测说这个本没诚意，缝合，不过玩下来嘛，在没玩过“前辈们”的情况下，这本子质量确实不错的，不愧是热门盒装</p>
 <p>可冲</p>
-<h3 id="28-从前有座玄离山--超惊喜">28 从前有座玄离山 | 超惊喜！</h3>
+<h3 id="29-从前有座玄离山--超惊喜">29 从前有座玄离山 | 超惊喜！</h3>
 <blockquote>
 <p>8.7 | 戏中人 | 城限 | 168</p>
 <p>关键词：欢乐 情感 甜甜恋爱</p>
@@ -565,7 +575,7 @@
 <p>（<a href="https://ferristale.com/xuanlishan/">此处情节，怕是严重透剧，单独写了，哈哈哈哈哈哈</a>）</p>
 <p>好了，平复心情，剧情开始急速推动，最后DM给了我们一人一个眼罩，开始了单口表演。我也不知道怎么描述，就满怀激情的念白？大概可以参考电影里大决战的情节。据说DM是学表演的，声情并茂，听得热泪盈眶。</p>
 <p>玄离山，冲！（我甚至为此产生了充值的念头）</p>
-<h3 id="29-勿忘我--非常饱满">29 勿忘我 | 非常饱满</h3>
+<h3 id="30-勿忘我--饱满">30 勿忘我 | 饱满</h3>
 <blockquote>
 <p>8.13 | 吾狐 | 独家 | 238（折后184）</p>
 <p>关键词：二战 历史 反战 情感</p>
@@ -589,6 +599,97 @@
 <p>最后DM都赞不绝口，一车高配玩家，太难得了！</p>
 <p>最后要说的是，这个本子很厚重，后劲很大，即使本身Bug满天飞，但依然个好故事，就是需要细细品。其实故事是真的很契合我，但我不知道为什么没沉进去。可能在纠结CP的事情？可能还有个原因是，DM全程扶车，我全程都在想怎么完成DM给我的任务。。。[捂脸] 像极了拿到凶手本，全程在想我要怎么藏[捂脸]</p>
 <p>建议就是，这段历史太沉重了，玩的话要做好心理准备，设身处地，不要出戏。</p>
+<h2 id="无剧透篇章">无剧透篇章</h2>
+<p>前面的或多或少有剧透，懒得改了，后面的尽量注意不剧透</p>
+<h3 id="31-神奇的罗斯塔特先生--duck不必">31 神奇的罗斯塔特先生 | duck不必</h3>
+<blockquote>
+<p>8.20| baker x bar | 盒装 | 158</p>
+<p>关键词：欢乐 机制 还原 情感 糅合</p>
+<p>时长：6.5h</p>
+<p>DM：不认识</p>
+</blockquote>
+<p>在别的群看到这个本，挺可爱的，反响也可以，刚好有人拉我，就去了</p>
+<p>据说是个网红店，一本叨叨的人都去这家打的罗斯塔特</p>
+<p>第一，确实装修很不错，独栋小区，有山有水</p>
+<p>第二，算是欢乐吧，不过机制部分太冗长，DM讲解讲半天讲不明白，而且他是跟这边几个人讲讲，跟那边几个人讲讲，结果哪边都没搞清楚规则</p>
+<p>第三，太长了，，，打困了</p>
+<p>第四，上个厕所出来灯都黑了，啥情况？都走了？哦开始沉浸了，，啥？还有沉浸是什么鬼？</p>
+<p>第五，修仙两小时，每小时收费20，我似乎懂了</p>
+<p>拉黑了</p>
+<h3 id="32-涂川--意难平">32 涂川 | 意难平</h3>
+<blockquote>
+<p>8.27| 吾狐 | 盒装 | 105</p>
+<p>关键词：情感</p>
+<p>时长：6h</p>
+<p>DM：温采</p>
+</blockquote>
+<p>清决，卿绝。卿本佳人的卿，与君决绝的绝。</p>
+<p>这辈子就是我们的前世 所说的下辈子，所以，我们不会再有来生了，今生往后，好好保重。</p>
+<p>谢谢你为我做的一切</p>
+<p>但你是否知道，这一切并非我想要的，我想要的从来只有你</p>
+<h3 id="33-外交官--体验拉满">33 外交官 | 体验拉满</h3>
+<blockquote>
+<p>8.29| 吾狐 | 盒装 | 102</p>
+<p>关键词：家国 机制</p>
+<p>时长：6.5h</p>
+<p>DM：大腿</p>
+</blockquote>
+<p>大不列颠永不日落！</p>
+<p>拿到英国，光明正大跟日本做了整场的盟友</p>
+<p>也拿到了所有物品，赢了游戏</p>
+<p>但这个游戏，没有人是真正的赢家</p>
+<p>因为我们都是中国人，那华夏历史上无比沉痛的一天</p>
+<p>我们的先辈，赢了战争，却输了家园</p>
+<p>奥兰多女士太霸气惹，不愧是我大不列颠永远的盟友！（我才没有被胁迫！）</p>
+<p>（队友真的很高配，中日演的好好</p>
+<p>（作为英国外交官，也有诸多无奈，无论是国家，还是个人。当站上这个位置那刻，便注定如此吧</p>
+<h3 id="34-在逃公主--emmmm">34 在逃公主 | emmmm</h3>
+<blockquote>
+<p>9.2 | 罗生门 | 盒装 | 开业免费</p>
+<p>关键词：欢乐 情感</p>
+<p>时长：5h</p>
+</blockquote>
+<p>新店，仿佛是氪金店，有点东西</p>
+<p>开场很中二，像玩游戏，攻略NPC，学魔法，打哥布林，就王子</p>
+<p>那魔法，别提多中二了！</p>
+<p>然后就反转了，异变突起，原来你们都是，桀桀桀</p>
+<p>情感环节我是亲情线，但怎么说呢，可能太老套了，没沉浸。。</p>
+<p>有换装 ！洛丽塔！！</p>
+<h3 id="35-人间记--人间不过平凡二字">35 人间记 | 人间不过“平凡”二字</h3>
+<blockquote>
+<p>9.3 | 吾狐 | 城限 | 188</p>
+<p>关键词：民国 情感 家国 还原</p>
+<p>时长：5h</p>
+</blockquote>
+<p>体量很大，本子里全是故事</p>
+<p>和盛小姐拿到CP，跟勿忘我有一丢丢像，是为了国家鞠躬尽瘁死而后已的角色</p>
+<p>跟盛小姐之间的事情好像也有一点点像，不过没有那么舔，而且是双向输出</p>
+<p>其他角色或多或少有一点忍辱负重的感觉</p>
+<p>小故事一串串，大概是想表达小人物的奋斗吧</p>
+<p>其实也不算小故事了，但感觉重点不是很突出</p>
+<p>而且故事多了，反而找不到输出的点，剧本设计的时候好像也没有输出点</p>
+<p>就，一车人憋了一路，快内伤了都。。。</p>
+<h3 id="36-粉灯--窝戏船港美绳zui强的蓝仁">36 粉灯 | 窝戏船港美绳zui强的蓝仁！</h3>
+<blockquote>
+<p>9.4 | 一本叨叨 | 盒装 | 168</p>
+<p>机制阵营</p>
+<p>6h</p>
+<p>DM：咪哥</p>
+</blockquote>
+<p>开头一串粤语，结尾一串粤语，配乐也是粤语</p>
+<p>咣栋人狂喜</p>
+<p>一口蹩脚的广普把其他人气死hhhhh</p>
+<p>讲道理这应该是我玩得最投入的一个机制本了</p>
+<p>来之前想了想，这仿佛是一个港风黑帮本，那我穿个黑色风衣吧</p>
+<p>结果给我抽到了黑帮头子，而且很神奇，盲抽的情况下，拿到CP的都是相熟的人</p>
+<p>过程就不说了，各自发展自己的势力嘛，搞钱的搞钱，搞人的搞人</p>
+<p>不得不说咪哥牛逼，全程不看手册，而且有点帅hh</p>
+<p>最后，黑帮大战，到了比拼手气的时候，我竟然一把20一把21，完成碾压</p>
+<p>对手还是唯一赢了庄家的人，这就是信众的力量嘛hhhhh（感谢朋友们的兹磁hhh</p>
+<p>赢了之后还可以学黑帮大佬大放阙词，难得光明正大飙粤语</p>
+<p>就很开心</p>
+<p>最后我爱的人也跟了我</p>
+<p>很圆满的结局，很开心~</p>
         </div>
 
         
