--- a/my-LARP-list/index.html
+++ b/my-LARP-list/index.html
@@ -180,7 +180,7 @@
         <li><a href="#30-勿忘我--饱满">30 勿忘我 | 饱满</a></li>
       </ul>
     </li>
-    <li><a href="#无剧透篇章">无剧透篇章</a>
+    <li><a href="#无剧透篇">无剧透篇</a>
       <ul>
         <li><a href="#31-神奇的罗斯塔特先生--duck不必">31 神奇的罗斯塔特先生 | duck不必</a></li>
         <li><a href="#32-涂川--意难平">32 涂川 | 意难平</a></li>
@@ -188,6 +188,7 @@
         <li><a href="#34-在逃公主--emmmm">34 在逃公主 | emmmm</a></li>
         <li><a href="#35-人间记--人间不过平凡二字">35 人间记 | 人间不过“平凡”二字</a></li>
         <li><a href="#36-粉灯--窝戏船港美绳zui强的蓝仁">36 粉灯 | 窝戏船港美绳zui强的蓝仁！</a></li>
+        <li><a href="#36-曦和失焰--如果告诉你这是个骗局你还会玩吗">36 曦和失焰 | 如果告诉你这是个骗局，你还会玩吗</a></li>
       </ul>
     </li>
   </ul>
@@ -599,7 +600,7 @@
 <p>最后DM都赞不绝口，一车高配玩家，太难得了！</p>
 <p>最后要说的是，这个本子很厚重，后劲很大，即使本身Bug满天飞，但依然个好故事，就是需要细细品。其实故事是真的很契合我，但我不知道为什么没沉进去。可能在纠结CP的事情？可能还有个原因是，DM全程扶车，我全程都在想怎么完成DM给我的任务。。。[捂脸] 像极了拿到凶手本，全程在想我要怎么藏[捂脸]</p>
 <p>建议就是，这段历史太沉重了，玩的话要做好心理准备，设身处地，不要出戏。</p>
-<h2 id="无剧透篇章">无剧透篇章</h2>
+<h2 id="无剧透篇">无剧透篇</h2>
 <p>前面的或多或少有剧透，懒得改了，后面的尽量注意不剧透</p>
 <h3 id="31-神奇的罗斯塔特先生--duck不必">31 神奇的罗斯塔特先生 | duck不必</h3>
 <blockquote>
@@ -690,6 +691,26 @@
 <p>就很开心</p>
 <p>最后我爱的人也跟了我</p>
 <p>很圆满的结局，很开心~</p>
+<h3 id="36-曦和失焰--如果告诉你这是个骗局你还会玩吗">36 曦和失焰 | 如果告诉你这是个骗局，你还会玩吗</h3>
+<blockquote>
+<p>9.7 | 一本叨叨 | 独家 | 208</p>
+<p>还原 诡计</p>
+<p>5h</p>
+<p>DM：allen</p>
+</blockquote>
+<p>allen哥，久仰大名</p>
+<p>至于剧本，我不知道该说什么</p>
+<p><strong>首先第一条，这个不是硬核本，这不是硬核本，不是硬核本！</strong></p>
+<p>顶多算个还原，但还原难度似乎极大</p>
+<p>因为根本没有线索</p>
+<p>所有一切都是骗局，所有人基本是懵逼状态</p>
+<p>甚至赢的时候也是懵逼的</p>
+<p>（上面这句话，我们占了一半</p>
+<p>（我们输得一脸懵逼</p>
+<p>嗯不能说更多了</p>
+<p>总结：整个剧本就是一个谎言，都是套路，都是欺骗，却又无比真实。与其说是个还原，不如说是个教学？</p>
+<p>所以，如果我告诉你这是个骗局，你还会玩吗？</p>
+<p>（Ps：结尾还给布置了课后作业，，整个日月星光影的故事令人头皮发麻。。</p>
         </div>
 
         
