--- a/my-LARP-list/index.html
+++ b/my-LARP-list/index.html
@@ -189,6 +189,16 @@
         <li><a href="#35-人间记--人间不过平凡二字">35 人间记 | 人间不过“平凡”二字</a></li>
         <li><a href="#36-粉灯--窝戏船港美绳zui强的蓝仁">36 粉灯 | 窝戏船港美绳zui强的蓝仁！</a></li>
         <li><a href="#36-曦和失焰--如果告诉你这是个骗局你还会玩吗">36 曦和失焰 | 如果告诉你这是个骗局，你还会玩吗</a></li>
+        <li><a href="#37-年轮--经典之作">37 年轮 | 经典之作</a></li>
+        <li><a href="#38-周公游记--题目不会但是好题">38 周公游记 | 题目不会，但是好题！</a></li>
+        <li><a href="#39-千秋赋">39 千秋赋</a></li>
+        <li><a href="#实景探险家--好吃好玩好看">实景：探险家 | 好吃，好玩，好看！</a></li>
+        <li><a href="#40-挟剑清风--一蓑烟雨任平生">40 挟剑清风 | 一蓑烟雨任平生</a></li>
+        <li><a href="#41-第一次送你花--要好好爱这个世界噢">41 第一次送你花 | 要好好爱这个世界噢</a></li>
+        <li><a href="#42-食梦记--周公仪yyds">42 食梦记 | 周公仪yyds！</a></li>
+        <li><a href="#43-金陵有座东君书院--山有木兮木有枝">43 金陵有座东君书院 | 山有木兮木，有枝</a></li>
+        <li><a href="#44-洋葱">44 洋葱</a></li>
+        <li><a href="#45-一座城--明年能玩上一座城2吗">45 一座城 | 明年能玩上一座城2吗</a></li>
       </ul>
     </li>
   </ul>
@@ -710,6 +720,82 @@
 <p>总结：整个剧本就是一个谎言，都是套路，都是欺骗，却又无比真实。与其说是个还原，不如说是个教学？</p>
 <p>所以，如果我告诉你这是个骗局，你还会玩吗？</p>
 <p>（Ps：结尾还给布置了课后作业，，整个日月星光影的故事令人头皮发麻。。</p>
+<h3 id="37-年轮--经典之作">37 年轮 | 经典之作</h3>
+<p>9.11 命运之轮 盒装 推理 3.5h</p>
+<p>好像是16年的本了，流传至今，可想而知</p>
+<p>当然也由于老本，推理难度已经成为新手级别</p>
+<p>（就挺适合我的hhhhh</p>
+<p>设定很有意思，相比死幻不难理解，大概也由于设定不复杂，没那么多槽点hh</p>
+<p>窗女我打的不太明白，这个就很开心</p>
+<p>（所以我还是硬核小白是吗。。）</p>
+<blockquote>
+<p>只不过店家很令人无语，一个据说是老板的人跟我们一起打，好像看我俩不顺眼，一直跟我们过不去，差点还吵了起来。然后第二天在没有我们的群里说我朋友是天眼。。特无语。</p>
+<p>命运之轮作为奥夫馆，推土机都看不出来的吗，而且她也不是第一次去啊，无语，直接把我朋友整抑郁了。晦气</p>
+</blockquote>
+<h3 id="38-周公游记--题目不会但是好题">38 周公游记 | 题目不会，但是好题！</h3>
+<p>9.12 mph 硬核 5h</p>
+<p>周公游记真的太棒了，盘不通是我们太没本领555</p>
+<p>是开头直接给公式，然而你还是不会解的那种题</p>
+<p>而且挑不出毛病，设定很妙！</p>
+<p>真的，吹爆！可惜我们没什么时间，最后一幕没有好好盘</p>
+<h3 id="39-千秋赋">39 千秋赋</h3>
+<p>9.18 吾狐 独家 情感 7h DM-刁老师</p>
+<p>南宫兰幽，天下无敌！</p>
+<p>作者文笔很好，白话文，优雅又不致生涩</p>
+<p>情话那是顺手拈来，不带重样的</p>
+<p>余平安太爆炸了，一辈子的好兄弟</p>
+<p>就是父亲的点让我一下子反应不了</p>
+<p>夫人的点，我只觉得甜。我的天</p>
+<p>还有那个小哑巴，也很顶！</p>
+<h3 id="实景探险家--好吃好玩好看">实景：探险家 | 好吃，好玩，好看！</h3>
+<p>9.19 2%club 实景本 硬核 机制  15h 298！</p>
+<p>吹爆！</p>
+<p>实景剧本，1：1还原，或者说，剧本就是结合现场写的！老板即作者，作者即DM，逻辑强迫症，克苏鲁爱好者，占卜爱好者，硬核爱好者，而且都是段位很高那种！</p>
+<p>可以说，老板的用心随处可见，体系庞大，逻辑缜密</p>
+<p>整个世界观基于克苏鲁构建，融合了很多元素，可以解谜，可以推凶，可以阵营，可以寻宝，hhhh</p>
+<p>而且，竟然还有支线，玩着玩着会触发支线，然后，多一种死法hhh</p>
+<p>我们前天千秋赋玩到3点，回家四点，第二天9点起床，继续玩到晚上3点，但是很开心！完全感觉不到时间的流逝！</p>
+<p>我太可了</p>
+<p>另外，那天晚上中场的时候，他们竟然出了至少6张金！尼普！</p>
+<p>实景寻宝太好玩了</p>
+<p>老板特调太好喝了</p>
+<p>豪华晚餐太好吃了</p>
+<p>老鹿老鹿永远滴神</p>
+<h3 id="40-挟剑清风--一蓑烟雨任平生">40 挟剑清风 | 一蓑烟雨任平生</h3>
+<p>9.21 惊奇庆春 城限 6h DM-Yao | 武侠、换装、沉浸 | 角色：任朝野</p>
+<p>这个本，其实期待蛮高的，但是约不到，只能到惊奇打（甚至这家店也只能一个月两场）</p>
+<p>总体来说，还行。演绎不太给力，有些生硬和出戏，看得有点尬</p>
+<p>而这个本，真的好，从小时候在学堂无忧无虑，到突然家道中落，到亲友间爱怨情仇，故事可以说很丰满了</p>
+<p>会感觉，这个角色，他就是一个有血有肉的人，也有太多的无奈，太多的悲伤</p>
+<p>大姐头玩得好好哈哈，剧场太欢乐了，反而是我拖后腿了hhh</p>
+<h3 id="41-第一次送你花--要好好爱这个世界噢">41 第一次送你花 | 要好好爱这个世界噢</h3>
+<p>9.26 二类人生 城限 4.5h | 温馨治愈 | 角色：齐爷爷</p>
+<p>经常看到别人剧本测评，说“这不是一个摁头哭的本”，“这不是传统的苦苦本”云云，今天算是见识到真的温馨本了</p>
+<p>他又情感沉浸，有虐的部分，但 他终究是一个温馨治愈的故事。</p>
+<p>前世负你的，这辈子一定偿还</p>
+<p>上辈子不能好好在一起，这一次，余生请多指教</p>
+<p>有被暖到</p>
+<h3 id="42-食梦记--周公仪yyds">42 食梦记 | 周公仪yyds！</h3>
+<p>9.27 一本叨 城限 5.5h DM-茶茶子 | 硬核 | 角色：紫？</p>
+<p>不多说，冲就完了，周公系列，绝世好本，回味无穷！</p>
+<p>打过1，再打2，更丝滑！（我们几乎破了所有案件，虽然都是，投凶之后灵光一现hhh）</p>
+<p>谁能不爱zlh！</p>
+<h3 id="43-金陵有座东君书院--山有木兮木有枝">43 金陵有座东君书院 | 山有木兮木，有枝</h3>
+<p>9.30 一本叨 城限  5.5h | 古风、沉浸、欢乐 | 角色：陆嘉明</p>
+<p>开头跟挟剑有点像，很欢乐！在黄金海洋里徜徉可太绝了！</p>
+<p>总体还是不错吧，这个本有些早了，放到现在，有点不那么惊艳。</p>
+<p>演绎很棒！</p>
+<h3 id="44-洋葱">44 洋葱</h3>
+<p>10.1 湖州 城限 3.5h | 还原、情感 | 角色：小杨</p>
+<p>这个本，，有点小众，很吃队友和DM</p>
+<p>就，这个工作室的本有一个很特殊的内核，不过我们似乎并没有get到</p>
+<p>看了黑桃的测评，找好DM跟熟悉的队友去玩吧</p>
+<h3 id="45-一座城--明年能玩上一座城2吗">45 一座城 | 明年能玩上一座城2吗</h3>
+<p>10.4 疑问剧 盒子 5h | 推理还原、立意 | 角色：大叔</p>
+<p>4人PVE本，看到这个我就忍不住了。疑问剧新店开业1块钱打的本（友情打个广告）</p>
+<p>4人合力还原故事，轻跑团，有趣，真实</p>
+<p>真实到，这个本濒临封禁的边缘</p>
+<p>推荐阅读：<a href="https://zhuanlan.zhihu.com/p/346208506">访谈</a>、<a href="https://zhuanlan.zhihu.com/p/346186215">测评</a></p>
         </div>
 
         
