--- a/my-LARP-list/index.html
+++ b/my-LARP-list/index.html
@@ -230,7 +230,7 @@
         <li><a href="#71-织梦--终于到我出场的时候了">71 织梦 | 终于到我出场的时候了</a></li>
         <li><a href="#72-一期一会--从今天起我就是黄夸夸">72 一期一会 | 从今天起我就是黄夸夸</a></li>
         <li><a href="#73-无耻之徒--一二连打会更好">73 无耻之徒 | 一二连打会更好</a></li>
-        <li><a href="#73-无耻之徒--一二连打会更好-1">73 无耻之徒 | 一二连打会更好</a></li>
+        <li><a href="#74-作者不詳--一言難盡咯">74 作者不詳 | 一言難盡咯</a></li>
       </ul>
     </li>
   </ul>
@@ -995,27 +995,84 @@
 <p>2.7 解谜 城限 8h DM-小黄 | 日式 温馨 中二 | 角色：早川彻</p>
 <p>小黃yyds！漂亮，溫柔，活潑，甚至會安慰玩家！</p>
 <p>爛梗島yyds！小遊戲yyds，（想起惡龍了55555</p>
-<p>一個美好的夏夜！太喜歡聚在海邊喝點小啤酒，聊小祕密的感覺了</p>
+<p>一個美好的夏夜！太喜歡聚在海邊喝點小啤酒，聊悄悄話的感覺了</p>
 <blockquote>
 <p>有個環節，列一下劇本啥體驗top，我的是（不分先後</p>
+<ul>
+<li>
 <p>雲使</p>
+</li>
+<li>
 <p>修一</p>
+</li>
+<li>
 <p>粉燈</p>
+</li>
+<li>
 <p>惡龍</p>
+</li>
+<li>
 <p>玄離山</p>
+</li>
+<li>
 <p>探險家</p>
+</li>
+<li>
 <p>一期一會</p>
+</li>
+</ul>
 </blockquote>
 <p>（話說這個本也是搶到的車，自己搖不到人，給別人搖了整車，但前面比較歡樂，所以，倒也代入得不錯</p>
 <p>（小黃yyds！</p>
 <p>一生一期，一期一會，請珍惜還能相遇的時光</p>
 <h3 id="73-无耻之徒--一二连打会更好">73 无耻之徒 | 一二连打会更好</h3>
 <p>2.20 作么 城限 4h DM- | 欢乐 硬核 中二 | 角色：阿和</p>
+<p>離開杭州前約的本，原本說約六個盒子，不過一直沒約到</p>
+<p>這個本其實也有點遺憾，戲中人的一二連打聽說很不錯，可惜我很早就打過1，沒法上車（戲中人的霜華引2.5聽說也很不錯，可惜我打了2，也沒法。。</p>
+<p>遺憾之二是，隊友裏沒幾個打過1，某些地方效果會差一點（各位朋友以後玩續作請一定先打前作好嗎！</p>
+<p>遺憾之三是，隊友不太對對味hh，一個勁帶節奏</p>
+<p>然後，這個本其實是帶點感情的，奈何隊友是歡樂玩家</p>
+<p>放上我的意難平（劇透</p>
 <blockquote>
-<p>下面是广州的本了</p>
+<p>事已至此，允許我重新介紹一下
+我，阿和，今年28，一名古董商人，在某個夜黑風高的夜晚，我進化了
+啊不是，凝固了
+在那個晚上，我被人從背後褪去了所有衣物，拖到了大街上，當眾凌辱</p>
+<p>我突然有些同情起其他靜止的人們，在數不清個不會迎來天亮的夜裡，他們是否也跟我一樣，遭受了非人的待遇？
+甚至有些懷念起和大家一起生活的日子了，真是可笑！有什麼值得懷念的？將我當眾凌辱，將我冷眼旁觀的，不正是你們嗎？</p>
+<p>你們都 應該 受到懲罰</p>
+<p>不知道多少個日夜，我發現我能動了，我看見帕克在我面前奔走，我拼命呼救，我發不出聲，也沒人理我</p>
+<p>漸漸地，我恢復了行動，我到附近的超市，換了一身衣服，拿了一把小刀，你們所有人，都要付出代價</p>
+<p>當我走到五條小姐身旁，我發現她穿著一件寬大的男式外套，我停下了手中動作，她是不是，也有著跟我一樣的遭遇？
+我走到36.5身旁，我下不去手，我記得，她跟我說過，我是她最好的朋友。</p>
+<p>我在城市裡漫無目的，行屍走肉般走著，遇到了阿諾，他哭著跟我說，1900的房子燒了，他什麼都做不了，他扶我到了酒店，讓我在那等著，隨後他把你們都搬了過來。事已至此，允許我重新介紹一下
+我，阿和，今年28，一名古董商人，在某個夜黑風高的夜晚，我進化了
+啊不是，凝固了
+在那個晚上，我被人從背後褪去了所有衣物，拖到了大街上，當眾凌辱</p>
+<p>我突然有些同情起其他靜止的人們，在數不清個不會迎來天亮的夜裡，他們是否也跟我一樣，遭受了非人的待遇？
+甚至有些懷念起和大家一起生活的日子了，真是可笑！有什麼值得懷念的？將我當眾凌辱，將我冷眼旁觀的，不正是你們嗎？</p>
+<p>你們都 應該 受到懲罰</p>
+<p>不知道多少個日夜，我發現我能動了，我看見帕克在我面前奔走，我拼命呼救，我發不出聲，也沒人理我</p>
+<p>漸漸地，我恢復了行動，我到附近的超市，換了一身衣服，拿了一把小刀，你們所有人，都要付出代價</p>
+<p>當我走到五條小姐身旁，我發現她穿著一件寬大的男式外套，我停下了手中動作，她是不是，也有著跟我一樣的遭遇？
+我走到36.5身旁，我下不去手，我記得，她跟我說過，我是她最好的朋友。</p>
+<p>我在城市裡漫無目的，行屍走肉般走著，遇到了阿諾，他哭著跟我說，1900的房子燒了，他什麼都做不了，他扶我到了酒店，讓我在那等著，隨後他把你們都搬了過來。</p>
 </blockquote>
-<h3 id="73-无耻之徒--一二连打会更好-1">73 无耻之徒 | 一二连打会更好</h3>
-<p>2.20 作么 城限 4h DM- | 欢乐 硬核 中二 | 角色：啊和</p>
+<p>last but not least</p>
+<p>雖然沒有拿到數字本，但這個角色我也蠻喜歡的，可惜硬核本沒法二刷</p>
+<p>（對了第三部出來了，得空去玩玩吧</p>
+<hr>
+<p><em>下面是广州的本了</em></p>
+<h3 id="74-作者不詳--一言難盡咯">74 作者不詳 | 一言難盡咯</h3>
+<p>5.15 南山 盒裝 6.5h DM- | 硬核 還原 | 角色：肆</p>
+<p>廣州首本，盒裝138，不知道是啥水平？</p>
+<p>跟師姐師妹們去打的，這年齡跨度大概有五六年？（突然在想凑個情感本也是不錯的hhh</p>
+<p>因爲這個本出來的時候我大概已經進入了半退圈，那時候一直在出差，很少打本，只聽說這個本不錯，具體是啥本還真沒印象</p>
+<p>結果DM告訴我這是陰陽師安倍系列。。我。。。。。（話說DM好像沒有自報姓名的習慣？</p>
+<p>先說好的，本子的排列形式很牛（大概不是原創，我隱約記得玩過類似的，不過還是要說本子的設計很牛</p>
+<p>然後是吐嘈，陰陽師日常被困啊你這是，這個系列不如改叫“營救安倍”好了</p>
+<p>還有這滿滿的病嬌味是什麼鬼，病嬌成癮了嗎</p>
+<p>最後，我不想再玩敘詭了，我累了</p>
         </div>
 
         
