--- a/wandering-2-collecting-garbage-on-the-Plateau/index.html
+++ b/wandering-2-collecting-garbage-on-the-Plateau/index.html
@@ -108,9 +108,9 @@
       type="song"
       fixed="true"
       mini="true"
-      autoplay="true"
+      autoplay="f"
       loop="none"
-      theme="true"
+      theme="f"
       volume="0.6"
       prelosd="auto"
       mutex="true"
@@ -333,7 +333,7 @@
     </p>
 <h2 id="十三大哥你捡垃圾你捡它有啥用啊">【十三】大哥你捡垃圾，你捡它有啥用啊</h2>
 <p>有点用，也有点没用，但终归是有一点用</p>
-<p><del><em>这篇文里，我插了一首BGM，里面有两句歌词</em></del></p>
+<p><del><em>这篇文里插了一首BGM，里面有两句歌词</em></del></p>
 <p><em><del>世界简直 不算可爱 宝贝</del></em></p>
 <p>环保这个事情，一直是颇有争议的，做环保的人，也一直是不容易的。最直接的一点，做环保不能给人们创收，不能创收，那么他的意义是什么呢，不是所有人都会为那虚无飘渺的东西买单。</p>
 <p>有人跟我说，你做环保，不能只埋头苦干，你要把这东西和实际生产结合起来，比如说去做环保电池。听起来好像没毛病，但这东西好像也跟做环保的人没什么关系，难不成你指望一个学生态的人会懂怎么设计和制造电池么？</p>
@@ -345,7 +345,7 @@
 <p><del><em>但还是那样开心 你也要来</em></del></p>
 <h2 id="十四只要你也喜欢gris">【十四】只要你也喜欢GRIS</h2>
 <p>我们就是相亲相爱的好朋友</p>
-<p>这小节是专为蔡姨写的，没想到在海拔4540米的地方，遇到了同样喜欢GRIS的伙伴。</p>
+<p>这一节是专为蔡姨写的，没想到在海拔4540米的地方，遇到了同样喜欢GRIS的伙伴。</p>
 <p>没说的，GRIS我吹爆！蔡姨我吹爆！</p>
 <p>
         <a data-fancybox="gallery" href="/WanderPlatu/GRIS.webp">
@@ -473,7 +473,7 @@
             <img class="mx-auto" alt="" src="/WanderPlatu/%e7%87%95%e9%b8%a5%e5%b1%95%e7%bf%85.jpg" />
         </a>
     
-也是燕鸥</p>
+还是燕鸥</p>
 <p>
         <a data-fancybox="gallery" href="/WanderPlatu/%e7%8b%bc%e6%9d%a5%e4%ba%86.webp">
             <img class="mx-auto" alt="" src="/WanderPlatu/%e7%8b%bc%e6%9d%a5%e4%ba%86.webp" />
@@ -548,7 +548,7 @@
             <img class="mx-auto" alt="" src="/WanderPlatu/%e5%9c%a8%e9%98%b3%e5%85%89%e6%88%bf%e7%9c%8b%e6%97%a5%e8%90%bd.webp" />
         </a>
     
-在阳光房看日落</p>
+阳光房看日落</p>
 <p>
         <a data-fancybox="gallery" href="/WanderPlatu/%e5%a4%95%e9%98%b3%e4%b8%8b%e7%9a%84%e7%81%ab%e7%bb%92%e8%8d%89.webp">
             <img class="mx-auto" alt="" src="/WanderPlatu/%e5%a4%95%e9%98%b3%e4%b8%8b%e7%9a%84%e7%81%ab%e7%bb%92%e8%8d%89.webp" />
