--- a/wandering-2-collecting-garbage-on-the-Plateau/index.html
+++ b/wandering-2-collecting-garbage-on-the-Plateau/index.html
@@ -309,7 +309,7 @@
             <img class="mx-auto" alt="" src="/WanderPlatu/%e6%88%91%e4%bb%ac%e6%8d%a1%e7%9a%84%e6%98%af%e4%bb%80%e4%b9%88.webp" />
         </a>
     </p>
-<h2 id="十一他人的善意">【十一】他人的善意</h2>
+<h2 id="十一陌生人的善意">【十一】陌生人的善意</h2>
 <p>在镇上的垃调我们称为唐镇垃调，在没有安排109垃调的情况下，一般是一天两次。出发的时候，我们会推出斗车，带上音响，循环播放早两期成员录的宣传语，比如中文的“垃圾不落地，青藏更美丽”，藏文的“头上有狼”，然后我们就沿镇两旁马路捡垃圾~</p>
 <p>当然噜，“头上有狼”是音译，藏文好像是青藏高原的意思~</p>
 <p>这个故事就发生在唐镇垃调的时候。某日的午后，我们照例在唐镇垃调，行过半程，从镇的另一头返回，路过一家商店。当时店外有一个男子，我见着他的时候他原在外面，突然跑进去，过了一会儿又跑出来，给我们塞了几个冰棒。</p>
