--- a/wandering-2-collecting-garbage-on-the-Plateau/index.html
+++ b/wandering-2-collecting-garbage-on-the-Plateau/index.html
@@ -126,8 +126,8 @@
 <p>如今时光流转，我又回到了毕业时的茫然和沉沦，只是毕竟长了几岁，心境上比当初要好一些，倒是没有那么焦虑了。我想，既然不知道做什么，那就来一场流浪吧。6月底，在租期的最后几天里，相当高效地处理了搬家、面试、取还/出售一些物件等事宜，回到家中，准备开启这趟旅程真正意义上的第一站。</p>
 <h2 id="一绿色江河">【一】绿色江河</h2>
 <p>绿色江河其实算是同行，老早就听过的，那时候对它的印象是：“在青藏高原捡垃圾”，这于我是有莫大吸引力的。可能是成长年代的关系，背包旅行的故事时有听闻，类似的书我买过不少，那时候还有人摩托车环游世界，拍成了纪录片。虽然“长途旅行归来，胡子拉渣，坐在席上侃侃而谈”这种故事有些老套，可我还就挺喜欢，大概也因这是我做不到的、向往的事情。加之青藏高原亦是我心中的向往，所以还蛮想去捡这么一趟垃圾。事实上，毕业的时候就投过职员应聘的简历，不过没有回音。这次投志愿者，倒是出乎意料的顺利。（就是要求挺多，流程繁琐）（难怪之前不要我）</p>
-<p>绿色江河有三个志愿者项目，我所要前往的是长江源水生态环境保护站。由于地处高原，所有志愿者都会被要求先到附近海拔较高的城市适应两天，而我，，，刚到格尔木的第一晚就感冒了😅</p>
-<p>凌晨两点半到格尔木，订的青旅在一个院子里，刚好那阵子我的导航有点问题，拖着行李绕着外圈前前后后走了好多遍硬是找不到，最后好不容易进了院子，前前后后又有三家青旅，而我订的那家，只在墙上找到门牌，门却找不着。。。店家电话也没人接，就很绝。。。等到终于打通电话，老板告诉我，有俩家是同一家，都他开的，，，🙂于是在这样一个燥热的夜晚，我穿着短袖和防晒衣，盖上店里的棉被，冷醒于半夜🙂第二天光荣感冒。早上出去吃早饭，周围人都是短袖加薄外套，我是羽绒身上套。</p>
+<p>绿色江河有三个志愿者项目，我所要前往的是长江源水生态环境保护站。由于地处高原，所有志愿者都会被要求先到附近海拔较高的城市适应两天，而我，，刚到格尔木的第一晚就感冒了😅</p>
+<p>凌晨两点半到格尔木，订的青旅在一个院子里，刚好那阵子我的导航有点问题，拖着行李绕着外圈前前后后走了好多遍硬是找不到，最后好不容易进了院子，前前后后又有三家青旅，而我订的那家，只在墙上找到门牌，门却找不着。。店家电话也没人接，就很绝。。等到终于打通电话，老板告诉我，有俩家是同一家，都他开的🙂，于是在这样一个燥热的夜晚，我穿着短袖和防晒衣，盖上店里的棉被，冷醒于半夜🙂第二天光荣感冒。早上出去吃早饭，周围人都是短袖加薄外套，我是羽绒身上套。</p>
 <p>查了下资料，高反不可怕，可怕的是感冒+高反，分分钟出人命，慌得我，吃饭不忘问一下老板感冒咋办。还好格尔木海拔不算高，养好就行，而我也在出发前勉强养好了。</p>
 <p>
         <a data-fancybox="gallery" href="/WanderPlatu/%e4%bf%9d%e6%8a%a4%e7%ab%99.webp">
@@ -145,7 +145,7 @@
     </p>
 <p>先从小扁的事迹开始吧。小扁是一个帅气的女生，关键时候靠得住，最著名的事迹大概要数救了大伙儿一命，妥妥的救命恩人！</p>
 <p>那天她们仨女生吃过晚饭，到附近的经幡玩，没曾想遇到了大黑小白两只狗，大黑是藏獒，（小白不知道是啥），大黑见着她们非常激动，绕着她们不停叫唤。一开始还好，但见瞅着大黑越挨越近，越叫越欢，女生们就慌啊，哪知道它想干嘛。关键时候小扁站了出来，安抚其他人，说不要慌，不要动，不要动，不要动，不要动，仿佛在念咒••••••最后也许是咒语产生了作用，也许是大黑失去了兴趣，走掉了。还得是小扁，靠谱！一场惊心动魄的交汇，就这样被化解掉了。事后据当事人说，那几分钟就像几辈子一样漫长，张姐好像还做了噩梦，被狗追追追，怎么跑都跑不出去？</p>
-<p>但话又说回来，小扁其实很胆小，有一回开完会，走廊灯没开，小扁在楼梯口站着，等张姐过来才拉着对方，问要不要一起去洗手间，问及原因，”怕黑“。小扁的胆子🤔，很难评，引用蔡姨的话就是</p>
+<p>但话又说回来，小扁其实很胆小，有一回开完会，走廊灯没开，小扁在楼梯口站着，等张姐过来才拉着对方，问要不要一起去洗手间，问及原因，“怕黑”。小扁的胆子🤔，很难评，引用蔡姨的话就是</p>
 <p>面对狗哥：100</p>
 <p>面对其他：0       [手动狗头]</p>
 <p>还有一个比较牛的是，当小扁拿起筷子，拉起了二胡😂</p>
