--- a/wandering-2-collecting-garbage-on-the-Plateau/index.html
+++ b/wandering-2-collecting-garbage-on-the-Plateau/index.html
@@ -108,9 +108,9 @@
       type="song"
       fixed="true"
       mini="true"
-      autoplay="f"
+      autoplay="false"
       loop="none"
-      theme="f"
+      theme="false"
       volume="0.6"
       prelosd="auto"
       mutex="true"
