--- a/international-voluntourism/index.html
+++ b/international-voluntourism/index.html
@@ -165,9 +165,9 @@
       mini="true"
       autoplay="true"
       loop="none"
-      theme="true"
+      theme="#255579"
       volume="0.6"
-      prelosd="auto"
+      preload="auto"
       mutex="true"
       list-folded="true">
     </meting-js>
@@ -247,9 +247,9 @@
       mini="true"
       autoplay="false"
       loop="none"
-      theme="false"
+      theme="#255579"
       volume="0.6"
-      prelosd="auto"
+      preload="auto"
       mutex="true"
       list-folded="true">
     </meting-js>
@@ -276,9 +276,9 @@
       mini="true"
       autoplay="false"
       loop="none"
-      theme="false"
+      theme="#255579"
       volume="0.6"
-      prelosd="auto"
+      preload="auto"
       mutex="true"
       list-folded="true">
     </meting-js>
