--- a/wandering-2-collecting-garbage-on-the-Plateau/index.html
+++ b/wandering-2-collecting-garbage-on-the-Plateau/index.html
@@ -158,13 +158,13 @@
       id="1337171221"
       server="netease"
       type="song"
-      fixed="true"
-      mini="true"
+      fixed="false"
+      mini="false"
       autoplay="true"
       loop="none"
-      theme="true"
+      theme="#255579"
       volume="0.6"
-      prelosd="auto"
+      preload="auto"
       mutex="true"
       list-folded="true">
     </meting-js>
